# ai-router

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.fa.md  README.md  budgets.example.json  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test.yml
db/init/: 01_schema.sql
docs/: ARCHITECTURE.md  CODE-RAG.md
docs/fa/: README.fa.md
hooks/: delegate_nudge.py  session_start_inbox.sh  worker_channel_nudge.py
mcp/: server.py
scripts/: verify_delivery.sh
shell/: r.sh
src/: code_index.py  delegate.py  ingest.py  repo_map.py  rules_index.py  sessions_index.py
templates/system-prompts/: deepseek.md  gemini.md  minimax.md
tests/: test_budgets.py  test_code_index.py  test_context_discipline.py  test_cost_math.py  test_cost_report.py  test_delegate_agent.py  test_delegate_cache.py  test_delegate_worker.py  test_ingest.py  test_inter_session_messaging.py  test_key_redaction.py  test_mcp_server.py  test_misc.py  test_r_wrapper.py  test_resilience.py  test_route_task.py  test_rules_index.py  test_sessions_index.py  test_worker_channel_nudge.py
